--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,7 +11,13 @@
     "tailwind:init": "tailwindcss init -p"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "@tailwindcss/cli": "^4.1.14",
+    "font-awesome": "^4.7.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
